# wicked-app

./: .env.example  .gitignore  IMPLEMENTACION.md  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/api/: routes.py
backend/app/api/endpoints/: budgets.py  categories.py  credit_card_transactions.py  dashboard.py  imported_transactions.py  recurring_expenses.py  registry_items.py  templates.py  transactions.py  watchlist.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  budget.py  category.py  credit_card_transaction.py  imported_transaction.py  recurring_expense.py  registry_item.py  template.py  transaction.py  watch_item.py
backend/app/services/: budget_service.py  category_service.py  credit_card_transaction_service.py  dashboard_service.py  imported_transaction_service.py  recurring_service.py  registry_service.py  template_service.py  tmdb_service.py  transaction_service.py  watchlist_service.py
backend/app/utils/: category_references.py  date_helpers.py
backend/scripts/: cleanup_legacy_category_fields.py  migrate_category_references.py  migrate_metadata_to_registry.py
database/: .gitignore  Dockerfile  README.md  init-mongo.js
frontend/: .env.example  .gitignore  .npmrc  Dockerfile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
scripts/: README.md  start-all.ps1  start-all.sh  start-backend.ps1  start-backend.sh  start-frontend.ps1  stop-all.ps1  (+4 more)
(+55 files in other folders)
